--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,4 +1,4 @@
 <div class="container text-center">
-    <h2 class="hello-text">Hello!<br>My name is Kacper Mekarski,<br>I have creative ideas and build websites</h2>
-  <a href="#" class="btn btn-default" role="button">View my work</a>
+  <h2>Hello!<br>My name is Kacper Mekarski,<br>I have creative ideas and build websites.</h2>
+  <%= link_to "View my work", portfolio_path, class: "btn btn-default" %>
 </div>
