--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,5 +33,16 @@
 
 .glyphicon {
     font-size: 20px;
-    color: white;
+    color: black;
+}
+
+body { 
+  background: url(https://i.imgur.com/UtQK25X.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.container {
+  margin: 5%;
 }
