--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,25 +10,24 @@
   <%= csrf_meta_tags %>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="#">Welcome</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Kacper Mekarski</a></li>
-      </ul>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <%= link_to "Welcome", welcome_path, class: "navbar-brand" %>
     </div>
+    <ul class="nav navbar-nav">
+      <li><%= link_to "Portfolio", portfolio_path %></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
 </nav>
 <body>
 
 <%= yield %>
 
 </body>
-<footer class="container-fluid text-right hello-text">
+<footer class="container-fluid text-right">
   <a href="#"><i class="fab fa-github glyphicon"></i></a>
   <a href="#"><i class="fab fa-linkedin glyphicon"></i></a><br>
   <p class="footer"><i class="fas fa-copyright"></i> 2018 Kacper Mekarski </p>
