--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li><%= link_to "Portfolio", portfolio_path %></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Contact", contact_path %></li>
     </ul>
   </div>
 </nav>
@@ -28,8 +28,9 @@
 
 </body>
 <footer class="container-fluid text-right">
-  <a href="#"><i class="fab fa-github glyphicon"></i></a>
-  <a href="#"><i class="fab fa-linkedin glyphicon"></i></a><br>
+  <a href="#"><i class="far fa-envelope glyphicon"></i></a>
+  <a href="https://github.com/K4cpersky"><i class="fab fa-github glyphicon"></i></a>
+  <a href="https://www.linkedin.com/in/kacper-m%C4%99karski-800a8a142/"><i class="fab fa-linkedin glyphicon"></i></a><br>
   <p class="footer"><i class="fas fa-copyright"></i> 2018 Kacper Mekarski </p>
 </footer>
     
