--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,12 @@
     color: black;
 }
 
+.glyphicon_contact {
+    font-size: 90px;
+    color: black;
+    padding: 30px;
+}
+
 body { 
   background: url(https://i.imgur.com/UtQK25X.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -45,4 +51,8 @@ body {
 }
 .container {
   margin: 5%;
+}
+
+.img-responsive {
+  max-width: 15%;
 }
