--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,4 +1,4 @@
-<div class="container text-center">
-  <h2>Hello!<br>My name is Kacper Mekarski,<br>I have creative ideas and build websites.</h2>
+<div class="container text-left">
+  <h2>Hello!<br>My name is Kacper Mekarski.<br>I found my passion in creating web applications.<br>I work each day to become better me today than yesterday.</h2>
   <%= link_to "View my work", portfolio_path, class: "btn btn-default" %>
 </div>
