--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the Portfolio controller here.
+// Place all the styles related to the About controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.img-responsive {
+  width: 20%;
+  height: 20%;
+}
