--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <%= link_to "Welcome", welcome_path, class: "navbar-brand" %>
+      <%= link_to "Welcome", root_path, class: "navbar-brand" %>
     </div>
     <ul class="nav navbar-nav">
       <li><%= link_to "Portfolio", portfolio_path %></li>
@@ -33,5 +33,5 @@
   <a href="https://www.linkedin.com/in/kacper-m%C4%99karski-800a8a142/"><i class="fab fa-linkedin glyphicon"></i></a><br>
   <p class="footer"><i class="fas fa-copyright"></i> 2018 Kacper Mekarski </p>
 </footer>
-    
+
 </html>
